# swar-stoi

./: .gitignore  CMakeLists.txt  README.md  compile_diff_opt.sh  main.cpp  perf_event.hpp  swar_stoi.cpp  swar_stoi.h  swar_stoi.hpp
apps/: CMakeLists.txt
include/: scoped_timer.hpp  swar_stoi.hpp
tests/: CMakeLists.txt  test_correctness.cpp  test_main.cpp  test_overflow.cpp  test_resilience.cpp  validate_correctness.cpp
